Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44690

Neon detection doesn't work properly and enabling neon cause build problems

XMLWordPrintable

      neon detection doesn't work on windows and it is possible to enable on -neon with configure.exe and it is causing build problems:

      multiple definition of qt_memfill32

      set QT_SRC_DIR=C:\Qt\Qt5.4.0-src
      set QT_BLD_DIR=c:\Qt\Qt5.4.0-QNX
      set PATH=C:\Python33\;C:\Perl64\site\bin;C:\Perl64\bin
      set PATH=%PATH%;C:\Qt\Qt5.4.0\Tools\mingw491_32\bin
      CALL "C:\QNX660\qnx660-env.bat"
      cd %QT_BLD_DIR%
      %QT_SRC_DIR%/configure.bat -debug-and-release -embedded -xplatform qnx-armle-v7-qcc -prefix /opt/qt5 -commercial -confirm-license -nomake examples -nomake tests -skip qtwebkit -skip qtwebkit-examples -no-audio-backend -no-wmf-backend -skip qtscript -skip qtdeclarative -skip qtxmlpatterns -skip qtserialport -no-fontconfig -neon -no-cups -no-iconv >> config.out
      make -j
      
      Result:
      .obj/qdrawhelper.obj: In function `qt_memfill32(unsigned int*, unsigned int, int)':
      C:/Qt/qt5.4.0-src/qtbase/src/gui/painting/qdrawhelper.cpp:6717: multiple definition of `qt_memfill32(unsigned int*, unsigned int, int)'
      .obj/qdrawhelper_neon.obj:C:/Qt/qt5.4.0-src/qtbase/src/gui/painting/qdrawhelper_neon.cpp:47: first defined here
      cc: C:/QNX660/host/win32/x86/usr/bin/arm-unknown-nto-qnx6.6.0eabi-ld caught signal 1
      make[3]: *** [../../lib/libQt5Gui.so.5.4.0] Error 1
      
      qdrawhelper_neon.cpp seems to be built as per:
      qcc -Vgcc_ntoarmv7le -c -Wno-psabi -lang-c++ -g -Wc,-std=gnu++0x -Wall -W -D_REENTRANT -fPIC -shared -DQT_NO_CLIPBOARD -DQT_NO_XKBCOMMON -DQT_NO_USING_NAMESPACE -DQT_BUILD_GUI_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_USE_BUNDLED_LIBPNG -DQT_ENABLE_HARFBUZZ_NG -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_CORE_LIB -mfpu=neon -IC:/Qt/qt5.4.0-src/qtbase/mkspecs/qnx-armle-v7-qcc -IC:/Qt/qt5.4.0-src/qtbase/src/gui -IC:/Qt/qt5.4.0-src/qtbase/include -IC:/Qt/qt5.4.0-src/qtbase/include/QtGui -I../../include -I../../include/QtGui -IC:/Qt/qt5.4.0-src/qtbase/include/QtGui/5.4.0 -IC:/Qt/qt5.4.0-src/qtbase/include/QtGui/5.4.0/QtGui -IC:/Qt/qt5.4.0-src/qtbase/src/gui/image -IC:/Qt/qt5.4.0-src/qtbase/src/3rdparty/libpng -IC:/Qt/qt5.4.0-src/qtbase/src/3rdparty/harfbuzz-ng/include -IC:/Qt/qt5.4.0-src/qtbase/include/QtCore/5.4.0 -IC:/Qt/qt5.4.0-src/qtbase/include/QtCore/5.4.0/QtCore -IC:/Qt/qt5.4.0-src/qtbase/include/QtCore -I../../include/QtCore -I.moc -IC:/QNX660/target/qnx6/usr/include -IC:/QNX660/target/qnx6/usr/include/freetype2 -I. C:/Qt/qt5.4.0-src/qtbase/src/gui/painting/qdrawhelper_neon.cpp -o .obj/qdrawhelper_neon.obj
      
      qdrawhelper.cpp seems to be built as per:
      qcc -Vgcc_ntoarmv7le -c -Wno-psabi -lang-c++ -g -Wc,-std=gnu++0x -Wall -W -D_REENTRANT -fPIC -shared -DQT_NO_CLIPBOARD -DQT_NO_XKBCOMMON -DQT_NO_USING_NAMESPACE -DQT_BUILD_GUI_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_USE_BUNDLED_LIBPNG -DQT_ENABLE_HARFBUZZ_NG -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_CORE_LIB -IC:/Qt/qt5.4.0-src/qtbase/mkspecs/qnx-armle-v7-qcc -IC:/Qt/qt5.4.0-src/qtbase/src/gui -IC:/Qt/qt5.4.0-src/qtbase/include -IC:/Qt/qt5.4.0-src/qtbase/include/QtGui -I../../include -I../../include/QtGui -IC:/Qt/qt5.4.0-src/qtbase/include/QtGui/5.4.0 -IC:/Qt/qt5.4.0-src/qtbase/include/QtGui/5.4.0/QtGui -IC:/Qt/qt5.4.0-src/qtbase/src/gui/image -IC:/Qt/qt5.4.0-src/qtbase/src/3rdparty/libpng -IC:/Qt/qt5.4.0-src/qtbase/src/3rdparty/harfbuzz-ng/include -IC:/Qt/qt5.4.0-src/qtbase/include/QtCore/5.4.0 -IC:/Qt/qt5.4.0-src/qtbase/include/QtCore/5.4.0/QtCore -IC:/Qt/qt5.4.0-src/qtbase/include/QtCore -I../../include/QtCore -I.moc -IC:/QNX660/target/qnx6/usr/include -IC:/QNX660/target/qnx6/usr/include/freetype2 -I. -o .obj/qdrawhelper.obj C:/Qt/qt5.4.0-src/qtbase/src/gui/painting/qdrawhelper.cpp
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sapiippo Samuli Piippo
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes